[gd_scene load_steps=4 format=2]

[ext_resource path="res://RainIsoMainContents/Scenes/SaveSlots.gd" type="Script" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/SaveSlotIcon.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "SaveSlots"
tracks/0/type = "value"
tracks/0/path = NodePath("SaveSlotIcon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 125.865, 2.90572 ), Vector2( -102.135, 2.90572 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SaveSlotIcon:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="SaveSlots" type="Node2D"]
position = Vector2( -9.86533, -6.90572 )
script = ExtResource( 1 )

[node name="SaveSlotIcon" parent="." instance=ExtResource( 2 )]
margin_left = 126.0
margin_top = 3.0
margin_right = 458.0
margin_bottom = 727.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/SaveSlots = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="SaveSlotIcon/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="SaveSlotIcon"]
